fixed header z-index

--- a/css/global.css
+++ b/css/global.css
@@ -14,6 +14,7 @@ main {
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 1;
 }
 
 .header__container {
